@@ -38,12 +38,11 @@ redistribute the program with almost no restrictions.
 <a
 href="http://mail.gnu.org/mailman/listinfo/info-lilypond">info-lilypond@gnu.org</a>
 is a low-volume list for information on the GNU Music project. 
-    This list is moderated; ask
-    <a href="mailto:drl@gnu.org">David R. Linn</a> or
-    <a href="mailto:hanwen@cs.uu.nl">Han-Wen</a> to send announcements for this 
-list.
+This list is moderated; ask <a href="mailto:drl@gnu.org">David
+R. Linn</a> or <a href="mailto:hanwen@cs.uu.nl">Han-Wen</a> to
+send announcements for this list.
 
-     <p>Searchable archives are available from
-<a href="http://mail.gnu.org/pipermail/info-lilypond">http://www.mail-archive.co
-m/info-lilypond@gnu.org</a>.
+     <p>Searchable archives are available from <a
+href="http://mail.gnu.org/archive/html/info-lilypond/">
+http://mail.gnu.org/archive/html/info-lilypond/</a>.
 
