@@ -1,13 +1,10 @@
 
-RedHat binaries for 7.2, 7.3 and 8.0 are provided by the
-<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-Planet CCRMA
-website.
+RedHat binaries for 7.2, 7.3, 8.0 and 9 are provided by the <a
+href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
+Planet CCRMA website.
 </a>
 
 
-The online doco for your package will be in
- <a href=file:///usr/share/doc/lilypond-1.6.6>
- file:///usr/share/doc/lilypond-1.6.6</a>
-
-</a>
+The online doco for your package will be in <code><a
+href="file:///usr/share/doc/lilypond/">file:///usr/share/doc/lilypond/</a>
+</code>
